baml_language/crates/baml_tests/snapshots/parser_error_recovery/baml_tests__parser_error_recovery__02_parser__invalid_syntax.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF "class"
    KW_CLASS "class"
  INTEGER_LITERAL "123"
  WORD "Invalid"
  L_BRACE "{"
  WORD "field"
  WORD "string"
  R_BRACE "}"
  ENUM_DEF
    KW_ENUM "enum"
    WORD "Status"
    L_BRACE "{"
    ENUM_VARIANT "ACTIVE"
      WORD "ACTIVE"
    ENUM_VARIANT "INACTIVE"
      WORD "INACTIVE"
    ENUM_VARIANT "PENDING"
      WORD "PENDING"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "Foo"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
    EXPR_FUNCTION_BODY
      BLOCK_EXPR "{"
        L_BRACE "{"
  CLIENT_DEF "// Missing return type
  client GPT4"
    KW_CLIENT "client"
    WORD "GPT4"
  R_BRACE "}"

=== ERRORS ===
Error: Expected class name, found integer
   ╭─[ invalid_syntax.baml:1:7 ]
   │
 1 │ class 123Invalid {  // Invalid class name
   │       ─┬─  
   │        ╰─── Expected class name, found integer
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected '{', found integer
   ╭─[ invalid_syntax.baml:1:7 ]
   │
 1 │ class 123Invalid {  // Invalid class name
   │       ─┬─  
   │        ╰─── Expected '{', found integer
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found integer
   ╭─[ invalid_syntax.baml:1:7 ]
   │
 1 │ class 123Invalid {  // Invalid class name
   │       ─┬─  
   │        ╰─── Expected top-level declaration, found integer
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found identifier
   ╭─[ invalid_syntax.baml:1:10 ]
   │
 1 │ class 123Invalid {  // Invalid class name
   │          ───┬───  
   │             ╰───── Expected top-level declaration, found identifier
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found '{'
   ╭─[ invalid_syntax.baml:1:18 ]
   │
 1 │ class 123Invalid {  // Invalid class name
   │                  ┬  
   │                  ╰── Expected top-level declaration, found '{'
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found identifier
   ╭─[ invalid_syntax.baml:2:3 ]
   │
 2 │   field string
   │   ──┬──  
   │     ╰──── Expected top-level declaration, found identifier
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found identifier
   ╭─[ invalid_syntax.baml:2:9 ]
   │
 2 │   field string
   │         ───┬──  
   │            ╰──── Expected top-level declaration, found identifier
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found '}'
   ╭─[ invalid_syntax.baml:3:1 ]
   │
 3 │ }
   │ ┬  
   │ ╰── Expected top-level declaration, found '}'
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected type, found '{'
    ╭─[ invalid_syntax.baml:10:19 ]
    │
 10 │ function Foo() -> {  // Missing return type
    │                   ┬  
    │                   ╰── Expected type, found '{'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected '}', found client
    ╭─[ invalid_syntax.baml:11:3 ]
    │
 11 │   client GPT4
    │   ───┬──  
    │      ╰──── Expected '}', found client
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected config block, found '}'
    ╭─[ invalid_syntax.baml:12:1 ]
    │
 12 │ }
    │ ┬  
    │ ╰── Expected config block, found '}'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found '}'
    ╭─[ invalid_syntax.baml:12:1 ]
    │
 12 │ }
    │ ┬  
    │ ╰── Expected top-level declaration, found '}'
    │ 
    │ Note: Error code: E0010
────╯
